--- a/style.css
+++ b/style.css
@@ -1,1 +1,46 @@
 h1 { font-family: Roboto}
+.wrapper {
+ margin: auto;
+    width: 80%;
+   border: dashed 1px red;
+    }
+    .menu__item {
+         padding: 0 13px;
+       border: dashed 1px red;
+        } 
+.header {
+    border:dashed 1px red;
+}
+.header {
+    margin: auto;
+    width: 80%;
+    border:dashed 1px red ;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+}
+.menu {
+ display: flex;
+    align-items: center;
+    }
+   .logo {
+    padding: 40px 0;
+}
+.menu {
+    display: flex;
+    align-items: center;
+}
+.main-section {
+    margin: auto;
+    width: 80%;
+    border: dashed 1px red;
+    }
+    .menu__item:last-child {
+        padding-right: 0;
+        }
+        .wrap__title {
+            margin-right: 100px;
+            margin-bottom: 100px ;
+        }
+        
