--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ h1 {
 }
 .logo {
   padding: 40px 0;
+  font:bold 24px/31px pt_serif,arial, helvetica, sans-serif;
 }
 .logo {
   margin-right: 63%;
@@ -48,3 +49,26 @@ h1 {
   padding: 0 13px;
   border: dashed 1px red;
 }  
+.logo_circle{
+  position: absolute
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%)
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  opacity: 7;
+}
+.logo_circle_color_dark-blue{
+  background: #0056EC;
+}
+.logo_circle_color_blue{
+  left: 8px;
+  top:56%
+  background:#C8DBFB;
+}
+.logo__circle {
+  width: 28px;
+  height: 28px;
+  border: dashed 1px red;
+  } 
