--- a/style.css
+++ b/style.css
@@ -33,11 +33,6 @@ h1 {
 .logo {
   margin-right: 63%;
 }
-.main-section {
-  margin: auto;
-  width: 80%;
-  border: dashed 1px red;
-}
 .menu__item:last-child {
   padding-right: 0;
 } 
@@ -62,13 +57,20 @@ h1 {
 .logo_circle_color_dark-blue{
   background: #0056EC;
 }
-.logo_circle_color_blue{
-  left: 8px;
-  top:56%
-  background:#C8DBFB;
-}
 .logo__circle {
   width: 28px;
   height: 28px;
   border: dashed 1px red;
   } 
+.logo__circle_color_dark-blue {
+  background: #0056EC;
+  transform: translateY(-50%);
+}
+.logo__circle_color_blue {
+  left: 8px;
+  top: 56%;
+  background: #C8DBFB;
+  } 
+  .main-content{
+    background: top right no-repeat url(img/mainimg.svg);
+  }
