--- a/style.css
+++ b/style.css
@@ -26,13 +26,6 @@ h1 {
   display: flex;
   align-items: center;
 }
-.logo {
-  padding: 40px 0;
-  font:bold 24px/31px pt_serif,arial, helvetica, sans-serif;
-}
-.logo {
-  margin-right: 63%;
-}
 .menu__item:last-child {
   padding-right: 0;
 } 
@@ -72,5 +65,10 @@ h1 {
   background: #C8DBFB;
   } 
   .main-content{
-    background: top right no-repeat url(img/mainimg.svg);
+    background: top right no-repeat url img/mainimg.svg;
+  }
+  .background__logo{
+    width: 190px;
+    height: 35px;
+    background: url img/logo.svg;
   }
