--- a/fonts.css
+++ b/fonts.css
@@ -1,1 +1,6 @@
-font-family:"PT Serif",Arial,Helvetika,"Sans-serif";
+@font-face {
+  font-family: 'pt_serifbold';
+  src: url('fonts/ptserif-bold-webfont.woff' format('woff')
+  font-weight: normal;
+  font-style: normal;
+}
