--- a/style.css
+++ b/style.css
@@ -54,14 +54,11 @@ h1 {
   padding: 40px 0;
   display: flex;
   justify-content: space-between;
- }
+}
 .logo {
   padding: 40px 0;
   font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
   width: 190px;
   height: 35px;
-  border: dashed 1px red;
-  background: red;
+  background-repeat: no-repeat;
 }
-background: url('img/logo.svg');
- 
