--- a/style.css
+++ b/style.css
@@ -6,10 +6,9 @@ h1 {
   width: 80%;
   border: dashed 1px red;
 }
-.menu__item { 
-  padding: 0 13px;
-  border: dashed 1px red;
-}
+.menu__item:last-child {
+  padding-right: 0;
+} 
 .header {
  border: dashed 1px red;
 }
@@ -19,6 +18,7 @@ h1 {
   border: dashed 1px red;
 }
 .header {
+  padding: 40px 0;
   display: flex;
   justify-content: space-between;
 }
@@ -29,14 +29,6 @@ h1 {
 .menu__item:last-child {
   padding-right: 0;
 } 
-.wrap__title {
-  margin-right: 100 px;
-  margin-bottom: 100 px;
-}
-.menu__item {
-  padding: 0 13px;
-  border: dashed 1px red;
-}  
 .logo_circle{
   position: absolute
   left: 0;
@@ -49,12 +41,6 @@ h1 {
 .logo{
   padding: 40px 0;
   font:bold 24px/31px pt_serif;
-}
-.header {
-  padding: 40px 0;
-  display: flex;
-  justify-content: space-between;
-}
 .logo {
   padding: 40px 0;
   font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
