--- a/style.css
+++ b/style.css
@@ -5,19 +5,10 @@ h1 {
   margin: auto;
   width: 80%;
   border: dashed 1px red;
-}
-.menu__item:last-child {
-  padding-right: 0;
 } 
 .header {
- border: dashed 1px red;
-}
-.header {
   margin: auto;
-  width: 80%;
   border: dashed 1px red;
-}
-.header {
   padding: 40px 0;
   display: flex;
   justify-content: space-between;
@@ -26,25 +17,13 @@ h1 {
   display: flex;
   align-items: center;
 }
-.menu__item:last-child {
-  padding-right: 0;
+.menu__item {
+  padding-right: 16px;
 } 
-.logo_circle{
-  position: absolute
-  left: 0;
-  }
-.logo{
-  width: 190px;
-  height: 35px;
-  background: url('logo.svg');
- }
-.logo{
-  padding: 40px 0;
-  font:bold 24px/31px pt_serif;
 .logo {
-  padding: 40px 0;
   font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
   width: 190px;
-  height: 35px;
+  height:28px;
+  background: url('logo.svg');
   background-repeat: no-repeat;
 }
