--- a/style.css
+++ b/style.css
@@ -27,3 +27,27 @@ h1 {
   background: url('logo.svg');
   background-repeat: no-repeat;
 }
+.menu__item {
+  padding: 0 13px;
+ font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  color: #000000;
+  text-decoration: none;
+}
+.menu__item:after {
+  position: absolute;
+  left: 0;
+  display: block;
+  content: '';
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity .5s;
+}
+ .menu__item:hover {
+  opacity: 0.5;
+}
+ .menu__item:hover:after, .menu__item_active:after {
+  opacity: 1;
+}
+ 
