--- a/style.css
+++ b/style.css
@@ -17,9 +17,6 @@ h1 {
   display: flex;
   align-items: center;
 }
-.menu__item {
-  padding-right: 16px;
-} 
 .logo {
   font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
   width: 190px;
@@ -28,8 +25,9 @@ h1 {
   background-repeat: no-repeat;
 }
 .menu__item {
-  padding: 0 13px;
- font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  position:relative;
+  margin: 0 13px;
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000000;
   text-decoration: none;
 }
@@ -50,4 +48,3 @@ h1 {
  .menu__item:hover:after, .menu__item_active:after {
   opacity: 1;
 }
- 
