--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family: Roboto;
+  font-family:'pt_serifbold'; ;
 }
 .wrapper {
   margin: auto;
@@ -18,7 +18,6 @@ h1 {
   align-items: center;
 }
 .logo {
-  font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
   width: 190px;
   height:35px;
   background: url('logo.svg');
