--- a/style.css
+++ b/style.css
@@ -53,14 +53,16 @@ h1 {
 }
 .main-content__title {
   margin: 0 0 50px 0;
-  font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
+  font-size: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
 }
 .main-content__subtitle {
   margin: 0 0 41px 0;
-  font: px12/14px Roboto, arial, helvetica, sans-serif;
+  font: 14px/16px Roboto, arial, helvetica, sans-serif;
 }
-.main {;
+.main {
+  padding: 0 63% 100px 0px;
   padding-right: 63%;
+  padding-bottom: 600px;
   background-repeat: no-repeat;
   background-position: top right;
   background: top right no-repeat url(mainImg.svg);
