--- a/fonts.css
+++ b/fonts.css
@@ -1,16 +1,5 @@
 @font-face {
     font-family: 'pt_serifbold';
-    src: url('ptserif-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-
-
-
-@font-face {
-    font-family: 'pt_serifbold_italic';
     src: url('fonts/ptserif-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
@@ -21,7 +10,18 @@
 
 
 @font-face {
-    font-family: 'pt_serifitalic';
+    font-family: 'pt_serifbold';
+    src: url('fonts/ptserif-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'pt_serifbold';
     src: url('fonts/ptserif-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
