--- a/fonts.css
+++ b/fonts.css
@@ -10,7 +10,7 @@
 
 
 @font-face {
-    font-family: 'pt_serifbold';
+    font-family: 'pt_serifbold_italik';
     src: url('fonts/ptserif-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
@@ -21,7 +21,7 @@
 
 
 @font-face {
-    font-family: 'pt_serifbold';
+    font-family: 'pt_serifbold_regilar';
     src: url('fonts/ptserif-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
