--- a/style.css
+++ b/style.css
@@ -58,8 +58,13 @@ h1 {
   font: 18px/21px Roboto, arial, helvetica, sans-serif;
 }
 .main__button {
-  
-  
+  font: 14px/16px Roboto, arial, helvetica, sans-serif; 
+  width: 37%;
+  color: #fff;
+  background: #0056EC;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 4px;
 }
 .main {
   padding: 0 55% 100px 0;
