--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-h1 {
-  font-family:'pt_serifbold'; ;
+body {
+  margin: 0;
 }
 .wrapper {
   margin: auto;
@@ -26,10 +26,13 @@ h1 {
 }
 .menu__item {
   position:relative;
-  margin: 0 10px;
-  font: 500 22px/26px Roboto, arial, helvetica, sans-serif;
+  margin-right: 29px;
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000000;
   text-decoration: none;
+}
+.menu__item:last-child {
+  margin-right: 0;
 }
 .menu__item:after {
   position: absolute;
@@ -44,7 +47,7 @@ h1 {
 }
  .menu__item:hover {
   opacity: 0.5;
-}
+ }
  .menu__item:hover:after, .menu__item_active:after {
   opacity: 1;
 }
@@ -55,18 +58,19 @@ h1 {
 }
 .main__subtitle {
   margin: 0 0 41px 0;
-  font: 18px/21px Roboto, arial, helvetica, sans-serif;
+  font: 500 22px/26px 'Roboto', arial, helvetica, sans-serif;
 }
 .main__button {
   font: 14px/16px Roboto, arial, helvetica, sans-serif; 
-  width: 37%;
+  width: 35%;
   color: #fff;
   background: #0056EC;
-  padding: 14px 16px;
+  padding: 18px 20px;
   text-decoration: none;
   border-radius: 4px;
 }
 .main {
   padding: 0 55% 100px 0;
   background: top right no-repeat url(mainImg.svg);
+  background-size: 55%;
 }
