--- a/style.css
+++ b/style.css
@@ -54,16 +54,17 @@ body {
 .main__title {
   background: #ECF3FF;
   margin: 0 0 50px 0;
-  font: bold 50px/65px pt_serifbold, arial, helvetica, sans-serif;
+  font: bold 66px/87px pt_serifbold, arial, helvetica, sans-serif;
+  padding: 47px;
 }
 .main__subtitle {
   margin: 0 0 41px 0;
-  font: 500 22px/26px 'Roboto', arial, helvetica, sans-serif;
+  font: 400 22px/25px 'Roboto', arial, helvetica, sans-serif;
 }
 .main__button {
-  font: 14px/16px Roboto, arial, helvetica, sans-serif; 
-  width: 35%;
-  color: #fff;
+  font: 18px/22px Roboto, arial, helvetica, sans-serif; 
+  width: 40%;
+  color #000000; 
   background: #0056EC;
   padding: 18px 20px;
   text-decoration: none;
