--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .menu__item {
   position:relative;
   margin-right: 29px;
-  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  font: 500 18px/20px Roboto, arial, helvetica, sans-serif;
   color: #000000;
   text-decoration: none;
 }
@@ -52,19 +52,19 @@ body {
   opacity: 1;
 }
 .main__title {
-  background: #ECF3FF;
   margin: 0 0 50px 0;
   font: bold 66px/87px pt_serifbold, arial, helvetica, sans-serif;
-  padding: 47px;
+  padding-top: 101px;
 }
 .main__subtitle {
   margin: 0 0 41px 0;
-  font: 400 22px/25px 'Roboto', arial, helvetica, sans-serif;
+  font: 500 26px/28px 'Roboto', arial, helvetica, sans-serif;
+  width: 76%;
 }
 .main__button {
   font: 18px/22px Roboto, arial, helvetica, sans-serif; 
   width: 40%;
-  color #000000; 
+  color: #000000; 
   background: #0056EC;
   padding: 18px 20px;
   text-decoration: none;
