--- a/style.css
+++ b/style.css
@@ -9,13 +9,16 @@ body {
 .header {
   margin: auto;
   border: dashed 1px red;
-  padding: 40px 0;
+  padding: 10px 0;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 127px;
+  margin-bottom: 28px;
+  padding-top: 24px;
+  padding-left: 24px;
 }
+@media (max-width: 768px) {
 .menu {
-  display: flex;
+  display: none;
   align-items: center;
 }
 .logo {
@@ -23,6 +26,7 @@ body {
   height:31px;
   background: url('logo.svg');
   background-repeat: no-repeat;
+  text-decoration: none;
 }
 .menu__item {
   position:relative;
@@ -52,22 +56,21 @@ body {
   opacity: 1;
 }
 .main__title {
-  margin: 0 0 33px 0;
-  font: bold 66px/87px pt_serifbold, arial, helvetica, sans-serif;
-  padding-top: 75px;
+  margin-bottom: 44px;
+  font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
+  padding-left: 26px;
 }
 .main__title-text_highlight {
   background: #ecf3ff;
 }
 .main__subtitle {
-  max-width: 421px;
-  margin: 0px 0 44px 4px;
-  font: 500 22px/26px 'Roboto', arial, helvetica, sans-serif;
-  width: 76%;
+  font: 500 16px/19px 'Roboto', arial, helvetica, sans-serif;
+  width: 67%;
   letter-spacing: 0px;
+  padding-left: 63px;
 }
 .main__button {
-  font: 18px/21px Roboto, arial, helvetica, sans-serif;
+  font:500 16px/18px Roboto, arial, helvetica, sans-serif;
   width: 40%;
   color:#FFFFFF;
   background: #0056EC;
@@ -77,6 +80,9 @@ body {
   border-radius: 4px;
 }
 .main {
-  padding: 0 55% 150px 0;
+  text-align: center;
+  padding: 66% 0 0;
   background: top right no-repeat url(mainImg.svg);
+  background-size: 74%;
+  background-position: top center;
 }
