--- a/style.css
+++ b/style.css
@@ -86,3 +86,13 @@ body {
   background-size: 74%;
   background-position: top center;
 }
+@media (min-width: 320px) {
+.wrap__title {
+  font-size: 15px;
+  }
+}
+@media (min-width: 641px) {
+  .wrap__title {
+    font-size: 32px;
+  }
+}
