--- a/style.css
+++ b/style.css
@@ -13,9 +13,11 @@ body {
   display: flex;
   justify-content: space-between;
   margin-bottom: 127px;
+  margin-left: 197px;
 }
 .menu {
   display: flex;
+  margin-left: 197px;
 }
 .logo {
   width: 209px;
@@ -54,6 +56,7 @@ body {
 .main__title {
   margin: 0 0 33px 0;
   font: bold 66px/87px pt_serifbold, arial, helvetica, sans-serif;
+  margin-left: 197px;
 }
 .main__title-text_highlight {
   background: #ecf3ff;
@@ -64,6 +67,7 @@ body {
   font: 500 22px/26px 'Roboto', arial, helvetica, sans-serif;
   width: 76%;
   letter-spacing: 0px;
+  margin-left: 197px;
 }
 .main__button {
   font: 18px/21px Roboto, arial, helvetica, sans-serif;
@@ -74,6 +78,7 @@ body {
   height: 57px;
   text-decoration: none;
   border-radius: 4px;
+  margin-left: 197px;
 }
 .main {
   padding: 0 55% 150px 0;
