--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body {
   background-position: top center;
 }
 .main__subtitle{
-  font: 500 roboto 16px/19px pt_serifbold, arial, helvetica, sans-serif;
+  font: 500  16px/19px roboto pt_serifbold, arial, helvetica, sans-serif;
   font-size: 16px;
   line-height: 19px;
   margin-bottom: 25px;
@@ -120,7 +120,7 @@ body {
   background-position: top center;
 }
 .main__button{
-  font: 500 roboto 14px/16px pt_serifbold, arial, helvetica, sans-serif;
+  font: 500  14px/16px roboto pt_serifbold, arial, helvetica, sans-serif;
   font-size: 14px;
   line-height: 16px;
   text-align: center;
