--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@ body {
   display: flex;
   justify-content: space-between;
   margin-bottom: 102px;
-  margin-left: 197px;
+  margin-left: 0px;
 }
 .menu {
   display: flex;
   margin-right: 195px;
   padding: 10px;
+   margin-left: 0px;
 }
 .logo {
   width: 209px;
@@ -26,6 +27,7 @@ body {
   background: url('logo.svg');
   background-repeat: no-repeat;
   text-decoration: none;
+  margin-left: 0px;
 }
 .menu__item {
   position:relative;
@@ -36,6 +38,7 @@ body {
 }
 .menu__item:last-child {
   margin-right: 0;
+  margin-left: 0px;
 }
 .menu__item:after {
   position: absolute;
@@ -59,6 +62,7 @@ body {
   font: bold 66px/87px pt_serifbold, arial, helvetica, sans-serif;
   margin-left: 197px;
   padding-top: 92px;
+  margin-left: 0px;
 }
 .main__title-text_highlight {
   background: #ecf3ff;
@@ -69,7 +73,7 @@ body {
   font: 500 22px/26px 'Roboto', arial, helvetica, sans-serif;
   width: 76%;
   letter-spacing: 0px;
-  margin-left: 197px;
+  margin-left: 0px;
 }
 .main__button {
   font: 18px/21px Roboto, arial, helvetica, sans-serif;
@@ -80,48 +84,49 @@ body {
   text-decoration: none;
   border-radius: 4px;
   margin-left: 194px;
+  margin-left: 0px;
 }
 .main {
   padding: 0 55% 150px 0;
   background: top 15px right 41px no-repeat url(mainImg.svg);
   background-size: 44%;
   margin-right: 153px;
+  margin-left: 0px;
 }
 @media(max-width:375px){
 .menu{
   display: none;
 }
-.header{
+.header {
   text-align: center;
-  padding: 39px 0;
+  padding: 24px 24px 0;
   display: flex;
- margin-bottom: 28px;
- margin-left: 24px;
+  margin-bottom: 28px;
+  padding-left: 24px;
 }
-.main{
+.main {
   text-align: center;
   padding: 25% 0 0;
   background-size: 90%;
-  background-position: top center;
-}
-.main__title{
+{
+.main__title {
   text-align: center;
   font: 30px/40px pt_serifbold, arial, helvetica, sans-serif;
   font-size: 30px;
   line-height: 40px;
   margin-bottom: 32px;
 }
-.main__subtitle{
+.main__subtitle {
   text-align: center;
-  font: 500  16px/19px roboto pt_serifbold, arial, helvetica, sans-serif;
+  font: 500  16px/19px Roboto,pt_serifbold, arial, helvetica, sans-serif;
   font-size: 16px;
   line-height: 19px;
 }
-.main__button{
-  font: 500  14px/16px roboto pt_serifbold, arial, helvetica, sans-serif;
+.main__button {
+  text-align: center;
+  font: 500  14px/16px Roboto, pt_serifbold, arial, helvetica, sans-serif;
   font-size: 14px;
   line-height: 16px;
-  text-align: center;
 }
 .logo{
   background: url('logo2.svg');
