--- a/style.css
+++ b/style.css
@@ -103,6 +103,16 @@ body {
   display: flex;
   margin-bottom: 28px;
 }
+#lines {
+  border-bottom: 12px double blue;
+  border-top: 4 px solid blue;
+  content: "";
+  height: 4px;
+  width: 30px;
+  box-sizing: unset;
+  display: inline-block;
+  vertical-align: middle;
+}
 .main {
   text-align: center;
   padding: 25% 0 0;
