--- a/style.css
+++ b/style.css
@@ -97,49 +97,154 @@ body {
 .menu{
   display: none;
 }
+.wrapper {
+  width: 80%;
+  margin-left: 4%;
+  margin-right: 15%;
+  }
 .header {
+  margin-bottom: 30px;
+  }
+.logo {
+  position: relative;
+  margin-top: 0;
+  margin-left: 0;
+  padding-top: 19px;
+}
+.logo__circle {
+  position: absolute;
+  margin: 10px;
+}
+.logo__circle__color_dark-blue {
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  }
+.logo__circle_color_blue {
+  left: 7px;
+  top: 55%;
+  }
+ .main {
+  padding: 86% 0 10px 46px;
   text-align: center;
-  padding: 24px 24px 0;
-  display: flex;
-  margin-bottom: 28px;
-}
-#lines {
-  border-bottom: 12px double blue;
-  border-top: 4 px solid blue;
-  content: "";
-  height: 4px;
-  width: 30px;
-  box-sizing: unset;
-  display: inline-block;
-  vertical-align: middle;
-}
-.main {
+  background: top right no-repeat url(img/mainimgmini.svg);
+  }
+ .main__title {
+  margin-right: 0;
+  margin-bottom: 31px;
   text-align: center;
-  padding: 25% 0 0;
-  background-size: 90%;
-}
-.main__title {
-  text-align: center;
-  margin: 0 0 33px 0;
-  font: bold 20px/40px pt_serifbold, arial, helvetica, sans-serif;
-  padding-top: 121px;
-  font-size: 22px;
-
-}
+  font: bold 30px/40px pt_serifbold, arial, helvetica, sans-serif;
+  }
 .main__subtitle {
   text-align: center;
-  font: 500  16px/19px Roboto, pt_serifbold, arial, helvetica, sans-serif;
-  font-size: 16px;
-  line-height: 19px;
-}
+  margin: 0;
+  padding: 0;
+  margin-bottom: 25px;
+  font: bold 16px/19px Roboto, arial, helvetica, sans-serif;
+  }
 .main__button {
-  text-align: center;
-  font: 500  14px/16px Roboto, pt_serifbold, arial, helvetica, sans-serif;
-  font-size: 14px;
-  line-height: 16px;
-}
+  font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+  }
 .logo{
   background: url('logo2.svg');
   background-repeat: no-repeat;
-   }
-} 
+}
+#menu__toggle {
+  opacity: 0;
+}
+.menu__btn {
+  display: flex;
+  align-items: center;  
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #616161;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+.menu__btn {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 32px;
+  right: 24px;
+  width: 25px;
+  height: 17px;
+  cursor: pointer;
+  z-index: 1;
+  }
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #ECEFF1;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+  }
+#menu__toggle {
+  opacity: 0;
+}
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  }
+.menu__item:hover {
+  background-color: #CFD8DC;
+}
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  transition-duration: .25s;
+}
+.menu__box {
+  transition-duration: .25s;
+}
+.menu__item {
+  transition-duration: .25s;
+  }
+}
