--- a/style.css
+++ b/style.css
@@ -97,14 +97,14 @@ body {
 .menu{
   display: none;
 }
-.wrapper {
-  width: 80%;
-  margin-left: 4%;
-  margin-right: 15%;
-  }
 .header {
+  text-align: center;
   margin-bottom: 30px;
-  }
+  padding: 24px 24px 0;
+  display: flex;
+  margin-bottom: 28px;
+  padding-left: 24px;
+}
 .logo {
   position: relative;
   margin-top: 0;
@@ -119,32 +119,38 @@ body {
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  }
+}
 .logo__circle_color_blue {
   left: 7px;
   top: 55%;
-  }
- .main {
-  padding: 86% 0 10px 46px;
+}
+.main {
   text-align: center;
-  background: top right no-repeat url(img/mainimgmini.svg);
-  }
- .main__title {
-  margin-right: 0;
-  margin-bottom: 31px;
+  padding: 25% 0 0;
+  background-size: 90%;
+  background-position: top center;
+}
+.main__title {
   text-align: center;
-  font: bold 30px/40px pt_serifbold, arial, helvetica, sans-serif;
-  }
+  font: 30px/40px pt_serifbold, arial, helvetica, sans-serif;
+  font-size: 30px;
+  line-height: 40px;
+  margin-bottom: 32px;
+}
 .main__subtitle {
   text-align: center;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 25px;
-  font: bold 16px/19px Roboto, arial, helvetica, sans-serif;
-  }
+  background-size: 90%;
+  background-position: top center;
+  font: 500  16px/19px Roboto,pt_serifbold, arial, helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+}
 .main__button {
-  font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
-  }
+  text-align: center;
+  font: 500  14px/16px Roboto, pt_serifbold, arial, helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+}
 .logo{
   background: url('logo2.svg');
   background-repeat: no-repeat;
@@ -190,7 +196,7 @@ body {
   height: 17px;
   cursor: pointer;
   z-index: 1;
-  }
+}
 .menu__box {
   display: block;
   position: fixed;
