--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ body {
   z-index: 1;
 }
 .menu__box {
-  display: block;
+  display: none;
   position: fixed;
   visibility: hidden;
   top: 0;
@@ -202,8 +202,8 @@ body {
   margin: 0;
   padding: 80px 0;
   list-style: none;
-  text-align: center;
-  background-color: #ECEFF1;
+  text-align: center; 
+  background-color: #0000ff ;
   box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
   }
 #menu__toggle {
