--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ body {
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: #616161;
+  background-color:  #0000ff;
 }
 .menu__btn > span::before {
   content: '';
